Add index content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   />
 </head>
 <body>
-    
+    <div class="search">
+        <input type="text" class="input" placeholder="Search...">
+        <button class="btn">
+            <i class="fa fa-search"></i>
+        </button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
